@@ -1,0 +1,72 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>World Mathaba</title>
+  
+  <style type="text/css">
+    /* Client-specific Styles */
+    #outlook a {padding:0;} /* Force Outlook to provide a "view in browser" menu link. */
+    body{
+      -webkit-text-size-adjust:100%;
+      -ms-text-size-adjust:100%;
+      color: #555;
+      font-size: 14px;
+      text-rendering: optimizeLegibility;
+      background-color: white;
+      margin: 16px 8px;
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-weight: normal;
+      line-height: 18px;
+    }
+    img {outline:none; text-decoration:none; -ms-interpolation-mode: bicubic;}
+    a img {border:none;}
+    .image_fix {display:block;}
+    p {margin: 0.5em 0;}
+    div.article {
+      margin: 10px;
+      border: 1px solid #CCC;
+      padding: 0 10px 10px 10px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 8px #bbb;
+      background-color: #F9F9F9;
+    }
+    a {
+      color: #0069D6;
+      text-decoration: none;
+    }
+    a:hover {
+      color: #00438A;
+      text-decoration: underline;
+    }
+    h2 {
+      margin: 2px 4px 10px 4px;
+      text-align: center;
+      font-size: 20px;
+    }
+    h3 {
+      font-size: 18px;
+      line-height: 18px;
+      margin: 10px 2px;
+    }
+  </style>
+
+</head>
+
+<body>
+  <div class="content">
+    <h2>World Mathaba</h2>
+    <div class="article">
+      <div>
+        <h3>New user registered at WorldMathaba.net</h3>
+        <p>Name: <%=h @user.name.to_s %></p>
+        <p>Reason: <%=h @user.registration_role %></p>
+        <p>Link: <%= link_to @url, @url %></p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
