@@ -1,0 +1,7 @@
+New user registered at WorldMathaba.net
+=======================================
+
+Name: <%=h @user.name.to_s %>
+Reason: <%=h @user.registration_role %>
+
+More information about this user at <%= @url %>
